small fix for visiblility

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -230,8 +230,8 @@ h3.experienceLocation, h3.experienceTitle,  div.experienceText {
 
 .compSciSlidesFrame label {
   margin: auto;
-  width: 50%;
-  height: 100%;
+  width: 90%;
+  height: 60%;
   border-radius: 4px;
   position: absolute;
   left: 0; right: 0;
